# openmensa-parser-darmstadt

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yaml  update_full.yaml  update_today.yaml
cli/: Cargo.toml
cli/src/: main.rs
graphql/: menuitems.graphql
graphql/reverse_engineered/: dish.graphql  feedback.graphql  menuitem.graphql  menuitems.graphql
parser/: Cargo.toml
parser/graphql/: README.md  schema.graphql
parser/graphql/reverse_engineered/: dishes.graphql  locations.graphql
parser/src/: lib.rs  openmensa.rs  parser.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/feed/: mod.rs  v2.rs
src/: graphql.rs  lib.rs  main.rs  parser.rs
src/feed/: v2.rs
