[package]
name = "openmensa-darmstadt-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["http2"] }
chrono = "0.4.42"
graphql_client = "0.14.0"
quick-xml = { version = "0.38.3", features = ["serialize"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "net", "rt"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
