[package]
name = "openmensa-parser-darmstadt-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
openmensa-parser-darmstadt = { path = "../parser" }
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3"
anyhow = "1.0.101"
