[package]
name = "openmensa-parser-darmstadt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
graphql_client = "0.14"
quick-xml = { version = "0.38", features = ["serialize"] }
reqwest = { version = "0.12", features = ["charset", "http2", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
