[package]
name = "openmensa-parser-darmstadt-server"
version = "0.1.1"
edition = "2024"

[dependencies]
openmensa-parser-darmstadt = { path = "../parser" }
axum = { version = "0.8", features = ["http2"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3"
tokio = { version = "1.49", features = ["macros", "net", "rt"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
axum-prometheus = "0.10.0"
